--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Erik-jpg/aws-thought#readme",
   "dependencies": {
     "aws": "^0.0.3-2",
-    "aws-cli": "^0.0.2"
+    "aws-cli": "^0.0.2",
+    "aws-sdk": "^2.0.31",
+    "uuid": "^8.3.2"
   }
 }
